--- a/public/REPORTS.html
+++ b/public/REPORTS.html
@@ -22,7 +22,9 @@
         <li><a href="SETTINGS.html"><img src="gear.png" class="icon"> Settings</a></li>
       </ul>
       <div class="logout-container">
-        <button id="logoutBtn" class="logout-btn"><img src="logout.png" class="icon"/>Logout</button>
+        <button id="logoutBtn" class="logout-btn">
+          <img src="logout.png" class="icon"/>Logout
+        </button>
       </div>
     </aside>
 
@@ -86,7 +88,40 @@
     </main>
   </div>
 
+  <!-- Logout Confirmation Modal -->
+<div id="logoutModal" class="modal-logout">
+  <div class="modal-content-logout">
+    <div class="modal-header-logout">
+      <h3>Confirm Logout</h3>
+      <span class="close-btn" id="closeLogout">&times;</span>
+    </div>
+    <div class="modal-body-logout">
+      <p>Are you sure you want to log out of SmartPayroll?</p>
+    </div>
+    <div class="modal-buttons">
+      <button id="confirmLogout" class="confirm-btn">Yes</button>
+      <button id="cancelLogout" class="cancel-btn">Cancel</button>
+    </div>
+  </div>
+</div>
+
 <script>
+// ===== LOGOUT MODAL =====
+  const logoutBtn = document.getElementById("logoutBtn");
+  const logoutModal = document.getElementById("logoutModal");
+  const confirmLogout = document.getElementById("confirmLogout");
+  const cancelLogout = document.getElementById("cancelLogout");
+
+  logoutBtn.addEventListener("click", () => logoutModal.style.display = "flex");
+  cancelLogout.addEventListener("click", () => logoutModal.style.display = "none");
+  confirmLogout.addEventListener("click", () => {
+    fetch("/logout").then(() => window.location.href = "/LOGIN.html");
+  });
+  window.addEventListener("click", e => {
+    if (e.target === logoutModal) logoutModal.style.display = "none";
+  });
+
+
 document.addEventListener("DOMContentLoaded", async () => {
   const main = document.querySelector(".main");
   main.classList.add("show");
@@ -138,12 +173,6 @@ function populateTable(type, data) {
   }).join("");
 }
 
-// Logout
-document.getElementById("logoutBtn").addEventListener("click", () => {
-  if (confirm("Are you sure you want to log out?")) {
-    fetch("/logout").then(() => window.location.href="/LOGIN.html");
-  }
-});
 </script>
 </body>
 </html>
